added enum for testscript status